@startuml
' Рис. 2.3. Діаграма класів системи
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 11
skinparam classFontSize 11
skinparam nodesep 16
skinparam ranksep 70
skinparam class {
    BackgroundColor #f5f5f5
    BorderColor #333333
    BorderThickness 1.0
    ArrowColor #333333
}
skinparam packageStyle rectangle
hide circle

class OrchestrationService {
    + executeFullCycle()
    + executeSensitivity()
    + compareProfiles()
}

interface IDataRepository {
    + findProfile()
    + findCriteria()
    + findLocations()
    + findDecisionMatrix()
    + saveEvaluation()
    + findEvaluation()
}

package "Обчислювальне ядро" as CORE #fff7ee {
    class FAHPCalculator {
        + computeWeights()
    }

    class TOPSISRanker {
        + computeRanking()
    }

    class MonteCarloAnalyzer {
        + runSensitivity()
    }
}

package "Сутності предметної області" as DOM #fafafa {
    class Profile {
        + id : Integer
        + code : String
        + name : String
        + description : String
    }

    class Criterion {
        + id : Integer
        + code : String
        + name : String
        + unit : String
        + optimizationType : Enum {min, max}
        + scale : Enum {quantitative, ordinal}
    }

    class Location {
        + id : Integer
        + name : String
        + address : String
        + district : String
        + geometry : Point(WGS84)
    }

    class EvaluationRun {
        + id : Integer
        + createdAt : Timestamp
        + status : Enum
        + executionTimeMs : Integer
    }

    class RankingItem {
        + rank : Integer
        + closenessCoefficient : Decimal
        + distanceToPositive : Decimal
        + distanceToNegative : Decimal
    }

    class SensitivityRecord {
        + iterations : Integer
        + perturbation : Decimal
        + stabilityMatrix : Matrix
        + confidenceIntervals : Map
    }
}

' --- сервіси ---
OrchestrationService ..> FAHPCalculator
OrchestrationService ..> TOPSISRanker
OrchestrationService ..> MonteCarloAnalyzer
OrchestrationService ..> IDataRepository
OrchestrationService ..> EvaluationRun : <<creates>>
MonteCarloAnalyzer ..> TOPSISRanker : <<delegates>>

' --- зв'язки сутностей предметної області ---
Profile "*" -- "*" Criterion
Location "*" -- "*" Criterion
EvaluationRun "0..*" -- "1" Profile
EvaluationRun "1" *-- "0..1" SensitivityRecord
EvaluationRun "1" -- "0..*" RankingItem
Location "1" -- "0..*" RankingItem

@enduml
